Limit matched URLs by manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,19 @@
 {
     "manifest_version": 2,
-  
+
     "name": "Studenten beraten Unternehmen",
     "version": "1.0.0",
     "description": "Tauscht im BDSU 'Studierende(n)' gegen 'Studenten' aus",
     "content_scripts": [
-      {
-      "matches": ["*://*/*"],
-      "js": ["content.js"],
-      "run_at":"document_end"
-    }
-  ]
-  
-  }
+        {
+            "matches": [
+                "https://*.bdsu.de/*",
+                "https://*.bdsu-kongress.de/*",
+                "https://*.bdsu-alumni.de/*",
+                "https://*.bdsu.it/*"
+            ],
+            "js": ["content.js"],
+            "run_at": "document_end"
+        }
+    ]
+}
